# Pulse_Protocol

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  deployed_contracts.json  docker-compose.yml  environments.toml  package-lock.json  pulse-landing.html
.cargo/: config.toml
.github/workflows/: contracts.yml
contracts/beneficiary/: Cargo.toml
contracts/beneficiary/src/: contract.rs  errors.rs  lib.rs  storage.rs  test.rs  types.rs
contracts/beneficiary/test_snapshots/test/: test_can_claim.1.json  test_record_claim.1.json  test_record_claim_already_claimed.1.json  test_record_claim_not_beneficiary.1.json  (+2 more)
contracts/document-registry/: Cargo.toml
contracts/document-registry/src/: contract.rs  errors.rs  lib.rs  storage.rs  test.rs  types.rs
contracts/integration-tests/: Cargo.toml
contracts/integration-tests/test_snapshots/: test_document_inheritance_flow.1.json  test_emergency_recovery.1.json  test_full_inheritance_lifecycle.1.json
contracts/integration-tests/tests/: integration.rs
contracts/proof-of-life/: Cargo.toml
contracts/proof-of-life/src/: contract.rs  errors.rs  lib.rs  storage.rs  test.rs  types.rs
contracts/vault/: Cargo.toml
contracts/vault/src/: contract.rs  errors.rs  lib.rs  storage.rs  test.rs  types.rs
database/: init.sql
docs/: CLAUDE.md  CLAUDE_CODE_CONTEXT.md  GUIA_B1.md  GUIA_B1_BACKEND.md  PLAN_DESARROLLO.md  PLAN_DESARROLLO_MVP.md  PROMPT_INICIAL.md  Pulse_Protocol_Propuesta.md
mobile/: jest.config.js  package-lock.json  package.json  tsconfig.json
mobile/src/: App.tsx
mobile/src/navigation/: AppNavigator.tsx
mobile/src/screens/: BiometricSetupScreen.tsx  ClaimScreen.tsx  CreateVaultScreen.tsx  CreateWalletScreen.tsx  DashboardScreen.tsx  EmergencyCheckinScreen.tsx  ManageBeneficiariesScreen.tsx  VaultDetailScreen.tsx  VerifyScreen.tsx  WelcomeScreen.tsx
mobile/src/services/: auth.ts  verification.ts
mobile/src/stores/: authStore.ts  vaultStore.ts
mobile/src/types/: vault.ts  verification.ts
oracle/: Cargo.toml  Dockerfile  auth_payload.json
oracle/migrations/: 20260213_001_create_users.sql  20260213_002_create_vaults.sql  20260213_003_create_beneficiaries.sql  20260213_004_create_documents.sql  20260213_005_create_document_encrypted_keys.sql  20260213_006_create_verifications.sql  20260213_007_create_user_models.sql  20260213_008_create_events.sql  20260213_009_create_push_tokens.sql  20260215_001_mvp_schema.sql  20260228_001_assets_activity.sql
oracle/src/: auth.rs  config.rs  lib.rs
scripts/: deploy_testnet.sh  seed_demo_data.sh
src/: auth.rs  config.rs  main.rs
src/db/: postgres.rs  redis.rs
src/graphql/: schema.rs  types.rs
src/models/: activity.rs  asset.rs  beneficiary.rs  documents.rs  event.rs  mod.rs  user.rs  user_model.rs  vault.rs  verification.rs
src/services/: aggregator.rs  mod.rs  publisher.rs  soroban.rs  trustless_work.rs
src/services/contracts/: beneficiary.rs  mod.rs  proof_of_life.rs  vault.rs
web/: index.html  package-lock.json  package.json
web/src/: App.tsx  LandingPage.tsx  main.tsx  styles.css
web/src/data/: mock.ts
web/src/lib/: api.ts  freighter.ts
(+37 files in other folders)
