[workspace]
resolver = "2"
members = [
    "contracts/vault",
    "contracts/proof-of-life",
    "contracts/beneficiary",
    "contracts/document-registry",
    "contracts/integration-tests",
]

[workspace.dependencies]
soroban-sdk = "23.4.0"
soroban-token-sdk = "23.4.0"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
