[package]
name = "pulse-oracle"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pulse-oracle"
path = "../src/main.rs"

[dependencies]
# Web server
actix-web = "4"
actix-cors = "0.7"
actix-ws = "0.3"

# GraphQL
async-graphql = { version = "7", features = ["uuid", "chrono"] }
async-graphql-actix-web = "7"

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "migrate",
] }

# Redis
redis = { version = "0.25", features = ["tokio-comp", "aio"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Config
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utils
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9"
sha2 = "0.10"
hex = "0.4"
async-trait = "0.1"
futures = "0.3"
