[package]
name = "pulse-oracle"
version = "0.1.0"
edition = "2021"

default-run = "pulse-oracle"

[[bin]]
name = "pulse-oracle"
path = "../src/main.rs"

[dependencies]
# Web server
actix-web = "4"
actix-cors = "0.7"

# GraphQL
async-graphql = { version = "7", features = ["uuid", "chrono"] }
async-graphql-actix-web = "7"

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "migrate",
] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Config
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Auth (Stellar signature verification)
ed25519-dalek = "2"
base32 = "0.4"

# Utils
rand = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
async-trait = "0.1"
futures = "0.3"
